construção da home e sobre nos

--- a/home.html
+++ b/home.html
@@ -3,20 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/07faf65439.js"
+      crossorigin="anonymous"
+    ></script>
     <title>PARJA</title>
   </head>
   <body>
     <header>
-      <img src="images/cafeprovisorio.jpg" alt="" />
+      <div class="logo-slogan">
+        <img src="images/logo.png" alt="" />
+        <p>o som que atrai e o sabor que conquista</p>
+      </div>
       <nav>
-        <ol>
+        <ul>
           <li><a href="">home</a></li>
-          <li><a href="">sobre nós</a></li>
-          <li><a href="">contactos</a></li>
-        </ol>
+          <li><a href="/pages/sobre-nos.html">sobre nós</a></li>
+          <li><a href="">nosso menu</a></li>
+          <li><a href="">nossa playlist</a></li>
+        </ul>
       </nav>
     </header>
-    <footer></footer>
+    <main>
+      <div class="home-body">
+        <div class="imagem-main">
+          <img src="images/bartender.jfif" alt="" />
+        </div>
+        <div>
+          <p>
+            Somos um trio de amigos que adora café e gosta de passar o tempo a
+            ouvir jazz. Decidimos materializar esta ideia para mostrar às
+            pessoas que esta combinação é perfeita para o seu dia a dia. Com um
+            som envolvente no nosso ambiente, o sabor do nosso café especial
+            convida todos a juntarem-se a nós e a desfrutarem de momentos
+            memoráveis em boa companhia.
+          </p>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="contatos">
+        <ul>
+          <li>telefone - 912902536</li>
+          <li>mail - parja.international@gmail.com</li>
+          <li>Localização - Rua Augusta n° 22</li>
+        </ul>
+      </div>
+      <div class="contatos">
+        <ul>
+          <li class="redes-sociais">
+            <a href=""><img src="./images/facebook.png" alt="" /></a>
+          </li>
+          <li class="redes-sociais">
+            <a href=""><img src="./images/instagram.png" alt="" /></a>
+          </li>
+          <li class="redes-sociais">
+            <a href=""><img src="./images/twitter.png" alt="" /></a>
+          </li>
+        </ul>
+      </div>
+      <p>© todos direitos reservados ©</p>
+    </footer>
   </body>
 </html>
