modificação da pagina home

--- a/home.html
+++ b/home.html
@@ -28,15 +28,16 @@
     </header>
     <main>
       <div class="home-body">
-        <div class="imagem-main">
-          <img src="images/bartender.jfif" alt="" />
-        </div>
+        <!-- <div class="imagem-main">
+          <img src="images\café_faixa.png" alt="" />
+        </div> -->
         <div>
           <p>
-            Somos um trio de amigos que adora café e gosta de passar o tempo a
-            ouvir jazz. Decidimos materializar esta ideia para mostrar às
-            pessoas que esta combinação é perfeita para o seu dia a dia. Com um
-            som envolvente no nosso ambiente, o sabor do nosso café especial
+             Somos um trio de amigos que adora café e gosta de
+            ouvir jazz.
+             Decidímos materializar esta ideia para mostrar às
+            pessoas que esta combinação é perfeita para o seu dia a dia.
+             Com um som envolvente no nosso ambiente, o sabor do nosso café especial
             convida todos a juntarem-se a nós e a desfrutarem de momentos
             memoráveis em boa companhia.
           </p>
