--- a/home.html
+++ b/home.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/nav.css" />
+    <link rel="stylesheet" href="/styles/home.css" />
+    <link rel="stylesheet" href="/styles/footer.css" />
     <script
       src="https://kit.fontawesome.com/07faf65439.js"
       crossorigin="anonymous"
@@ -33,13 +35,12 @@
         </div> -->
         <div>
           <p>
-             Somos um trio de amigos que adora café e gosta de
-            ouvir jazz.
-             Decidímos materializar esta ideia para mostrar às
-            pessoas que esta combinação é perfeita para o seu dia a dia.
-             Com um som envolvente no nosso ambiente, o sabor do nosso café especial
-            convida todos a juntarem-se a nós e a desfrutarem de momentos
-            memoráveis em boa companhia.
+            Somos um trio de amigos que adora café e gosta de ouvir jazz.
+            Decidímos materializar esta ideia para mostrar às pessoas que esta
+            combinação é perfeita para o seu dia a dia. Com um som envolvente no
+            nosso ambiente, o sabor do nosso café especial convida todos a
+            juntarem-se a nós e a desfrutarem de momentos memoráveis em boa
+            companhia.
           </p>
         </div>
       </div>
