--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="/styles/nav.css" />
+    <link rel="stylesheet" href="../styles/sobre-nos.css" />
+    <link rel="stylesheet" href="/styles/footer.css" />
     <title>sobre nós</title>
   </head>
   <body>
