inicio menu hamburguer

--- a/home.html
+++ b/home.html
@@ -19,14 +19,24 @@
         <img src="images/logo.png" alt="" />
         <p>o som que atrai e o sabor que conquista</p>
       </div>
-      <nav>
-        <ul>
-          <li><a href="">home</a></li>
-          <li><a href="/pages/sobre-nos.html">sobre nós</a></li>
-          <li><a href="">nosso menu</a></li>
-          <li><a href="">nossa playlist</a></li>
-        </ul>
-      </nav>
+      <div class="opcoes">
+        <nav>
+          <ul>
+            <li><a href="">home</a></li>
+            <li><a href="/pages/sobre-nos.html">sobre nós</a></li>
+            <li><a href="">nosso menu</a></li>
+            <li><a href="">nossa playlist</a></li>
+          </ul>
+        </nav>
+        <div>
+          <button class="hamburguer"></button>
+          <ul class="nav-hidde">
+            <li><a href="">topico1</a></li>
+            <li><a href="">topico1</a></li>
+            <li><a href="">topico1</a></li>
+          </ul>
+        </div>
+      </div>
     </header>
     <main>
       <div class="home-body">
@@ -68,5 +78,6 @@
       </div>
       <p>© todos direitos reservados ©</p>
     </footer>
+    <script src="./script/main.js"></script>
   </body>
 </html>
