ajuste de margens

--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -52,7 +52,7 @@
           <br />
           <br />
           <br />
-          socios - Artiom, Pedro e João
+          Sócios - Artiom Gusanu, Pedro Pacheco e João Marques
           <br />
           <br />
           NiF - 258055677
