--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/styles/nav.css" />
     <link rel="stylesheet" href="../styles/sobre-nos.css" />
@@ -15,14 +19,28 @@
         <img src="../images/logo.png" alt="" />
         <p>o som que atrai e o sabor que conquista</p>
       </div>
-      <nav>
-        <ul>
-          <li><a href="../home.html">home</a></li>
-          <li><a href="">sobre nós</a></li>
-          <li><a href="">nosso menu</a></li>
-          <li><a href="">nossa playlist</a></li>
-        </ul>
-      </nav>
+      <div class="opcoes">
+        <nav>
+          <ul>
+            <li><a href="../home.html">home</a></li>
+            <li><a href="/">sobre nós</a></li>
+            <li><a href="">nosso menu</a></li>
+            <li><a href="">nossa playlist</a></li>
+          </ul>
+        </nav>
+        <div class="menu-obscuro">
+          <i onclick="comutarMenu()" id="hamburguer" class="material-icons"
+            >menu</i
+          >
+          <div id="menu-hidde">
+            <ul class="nav-hidde">
+              <li><a href="">topico1</a></li>
+              <li><a href="">topico1</a></li>
+              <li><a href="">topico1</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </header>
     <main class="main-sobre-nos">
       <div>
@@ -90,5 +108,6 @@
       </div>
       <p>© todos direitos reservados ©</p>
     </footer>
+    <script src="../script/main.js"></script>
   </body>
 </html>
