--- a/home.html
+++ b/home.html
@@ -26,8 +26,8 @@
       <div class="opcoes">
         <nav>
           <ul>
-            <li><a href="../home.html">home</a></li>
-            <li><a href="/">sobre nós</a></li>
+            <li><a href="">home</a></li>
+            <li><a href="./pages/sobre-nos.html">sobre nós</a></li>
             <li><a href="">nosso menu</a></li>
             <li><a href="">nossa playlist</a></li>
           </ul>
