--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -23,7 +23,7 @@
         <nav>
           <ul>
             <li><a href="../home.html">home</a></li>
-            <li><a href="/">sobre nós</a></li>
+            <li><a href="">sobre nós</a></li>
             <li><a href="">nosso menu</a></li>
             <li><a href="">nossa playlist</a></li>
           </ul>
