home background e nav

--- a/home.html
+++ b/home.html
@@ -25,12 +25,13 @@
       </div>
       <div class="opcoes">
         <nav>
-          <ul>
+          <ul class="margin-test">
             <li><a href="">home</a></li>
             <li><a href="./pages/sobre-nos.html">sobre nós</a></li>
             <li><a href="">nosso menu</a></li>
             <li><a href="">nossa playlist</a></li>
           </ul>
+          <div class="linha"></div>
         </nav>
         <div class="menu-obscuro">
           <i onclick="comutarMenu()" id="hamburguer" class="material-icons"
@@ -47,45 +48,12 @@
       </div>
     </header>
     <main>
-      <div class="home-body">
-        <!-- <div class="imagem-main">
-          <img src="images\café_faixa.png" alt="" />
-        </div> -->
-        <div>
-          <p>
-            Somos um trio de amigos que adora café e gosta de ouvir jazz.
-            Decidímos materializar esta ideia para mostrar às pessoas que esta
-            combinação é perfeita para o seu dia a dia. Com um som envolvente no
-            nosso ambiente, o sabor do nosso café especial convida todos a
-            juntarem-se a nós e a desfrutarem de momentos memoráveis em boa
-            companhia.
-          </p>
-        </div>
+      <div class="hero">
+        <h1>Bem-Vindo!</h1>
+        <p>Venha desfrutar da melhor experiência de café da cidade.</p>
+        <button>Sobre nós</button>
       </div>
     </main>
-    <footer>
-      <div class="contatos">
-        <ul>
-          <li>telefone - 912902536</li>
-          <li>mail - parja.international@gmail.com</li>
-          <li>Localização - Rua Augusta n° 22</li>
-        </ul>
-      </div>
-      <div class="contatos">
-        <ul>
-          <li class="redes-sociais">
-            <a href=""><img src="./images/facebook.png" alt="" /></a>
-          </li>
-          <li class="redes-sociais">
-            <a href=""><img src="./images/instagram.png" alt="" /></a>
-          </li>
-          <li class="redes-sociais">
-            <a href=""><img src="./images/twitter.png" alt="" /></a>
-          </li>
-        </ul>
-      </div>
-      <p>© todos direitos reservados ©</p>
-    </footer>
     <script src="./script/main.js"></script>
   </body>
 </html>
