--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -23,9 +23,9 @@
         <nav>
           <ul>
             <li><a href="../home.html">home</a></li>
-            <li><a href="">sobre nós</a></li>
-            <li><a href="">nosso menu</a></li>
-            <li><a href="">nossa playlist</a></li>
+            <li><a href="">Sobre Nós</a></li>
+            <li><a href="">Nosso Menu</a></li>
+            <li><a href="">Nossa Playlist</a></li>
           </ul>
         </nav>
         <div class="menu-obscuro">
@@ -34,9 +34,16 @@
           >
           <div id="menu-hidde">
             <ul class="nav-hidde">
-              <li><a href="">topico1</a></li>
-              <li><a href="">topico1</a></li>
-              <li><a href="">topico1</a></li>
+              <li><a href="">Tópico 1</a></li>
+              <li><a href="">Tópico 2</a></li>
+              <li><a href="">Tópico 3</a></li>
+              <li><a href="">Tópico 4</a></li>
+              <li><a href="">Tópico 5</a></li>
+              <li><a href="">Tópico 6</a></li>
+              <li><a href="">Tópico 7</a></li>
+              <li><a href="">Tópico 8</a></li>
+              <li><a href="">Tópico 9</a></li>
+              <li><a href="">Tópico 10</a></li>
             </ul>
           </div>
         </div>
@@ -46,7 +53,15 @@
       <div>
         <img src="../images/bartender.jfif" alt="" />
         <p>
-          Somos um trio de amigos que adora café e gosta de passar o tempo a
+          Somos um trio de amigos que gosta de café e de passar o tempo a
+          ouvir um bom jazz. Decidimos tornar possível esta ideia juntando ambos e construindo o "PARJA",
+          para mostrar às pessoas que esta combinação era o que faltava no seu dia a dia.
+          Com um som envolvente, e um café especial que convida, tornámos o nosso espaço num local acolhedor para todos,
+          fazendo um convite súbtil para que se juntem a nós e que desfrutem de momentos memoráveis em
+          boa companhia.
+        </p>
+        <p>
+          <!-- Somos um trio de amigos que adora café e gosta de passar o tempo a
           ouvir jazz. Decidimos materializar esta ideia para mostrar às pessoas
           que esta combinação é perfeita para o seu dia a dia. Com um som
           envolvente no nosso ambiente, o sabor do nosso café especial convida
@@ -59,15 +74,7 @@
           que esta combinação é perfeita para o seu dia a dia. Com um som
           envolvente no nosso ambiente, o sabor do nosso café especial convida
           todos a juntarem-se a nós e a desfrutarem de momentos memoráveis em
-          boa companhia.
-        </p>
-        <p>
-          Somos um trio de amigos que adora café e gosta de passar o tempo a
-          ouvir jazz. Decidimos materializar esta ideia para mostrar às pessoas
-          que esta combinação é perfeita para o seu dia a dia. Com um som
-          envolvente no nosso ambiente, o sabor do nosso café especial convida
-          todos a juntarem-se a nós e a desfrutarem de momentos memoráveis em
-          boa companhia.
+          boa companhia. -->
           <br />
           <br />
           <br />
