verificacao do html

--- a/home.html
+++ b/home.html
@@ -25,11 +25,11 @@
       </div>
       <div class="opcoes">
         <nav>
-          <ul class="margin-test">
+          <ul>
             <li><a href="">home</a></li>
-            <li><a href="./pages/sobre-nos.html">sobre nós</a></li>
-            <li><a href="">nosso menu</a></li>
-            <li><a href="">nossa playlist</a></li>
+            <li><a href="./pages/sobre-nos.html">Sobre Nós</a></li>
+            <li><a href="">Nosso Menu</a></li>
+            <li><a href="">Nossa Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
