--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -27,6 +27,7 @@
             <li><a href="">Nosso Menu</a></li>
             <li><a href="">Nossa Playlist</a></li>
           </ul>
+          <div class="linha"></div>
         </nav>
         <div class="menu-obscuro">
           <i onclick="comutarMenu()" id="hamburguer" class="material-icons"
