--- a/home.html
+++ b/home.html
@@ -11,16 +11,12 @@
     <link rel="stylesheet" href="/styles/nav.css" />
     <link rel="stylesheet" href="/styles/home.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
-    <script
-      src="https://kit.fontawesome.com/07faf65439.js"
-      crossorigin="anonymous"
-    ></script>
     <title>PARJA</title>
   </head>
   <body>
     <header>
       <div class="logo-slogan">
-        <img src="../images/logo.png" alt="" />
+        <img src="../images/logo.png" width="150" height="150" alt="" />
         <p>o som que atrai e o sabor que conquista</p>
       </div>
       <div class="opcoes">
