--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -54,12 +54,13 @@
       <div>
         <img src="../images/bartender.jfif" alt="" />
         <p>
-          Somos um trio de amigos que gosta de café e de passar o tempo a
-          ouvir um bom jazz. Decidimos tornar possível esta ideia juntando ambos e construindo o "PARJA",
-          para mostrar às pessoas que esta combinação era o que faltava no seu dia a dia.
-          Com um som envolvente, e um café especial que convida, tornámos o nosso espaço num local acolhedor para todos,
-          fazendo um convite súbtil para que se juntem a nós e que desfrutem de momentos memoráveis em
-          boa companhia.
+          Somos um trio de amigos que gosta de café e de passar o tempo a ouvir
+          um bom jazz. Decidimos tornar possível esta ideia juntando ambos e
+          construindo o "PARJA", para mostrar às pessoas que esta combinação era
+          o que faltava no seu dia a dia. Com um som envolvente, e um café
+          especial que convida, tornámos o nosso espaço num local acolhedor para
+          todos, fazendo um convite súbtil para que se juntem a nós e que
+          desfrutem de momentos memoráveis em boa companhia.
         </p>
         <p>
           <!-- Somos um trio de amigos que adora café e gosta de passar o tempo a
@@ -76,8 +77,6 @@
           envolvente no nosso ambiente, o sabor do nosso café especial convida
           todos a juntarem-se a nós e a desfrutarem de momentos memoráveis em
           boa companhia. -->
-          <br />
-          <br />
           <br />
           <br />
           Sócios - Artiom Gusanu, Pedro Pacheco e João Marques
