--- a/home.html
+++ b/home.html
@@ -54,7 +54,9 @@
       <div class="hero">
         <h1>Bem-Vindo!</h1>
         <p>Venha desfrutar da melhor experiência de café da cidade.</p>
-        <button>Sobre nós</button>
+        <a href="./pages/sobre-nos.html">
+          <button>Sobre nós</button>
+        </a>
       </div>
     </main>
     <script src="./script/main.js"></script>
