pagina topico 1, caminhos e estilizações

--- a/pages/topicoUm.html
+++ b/pages/topicoUm.html
@@ -36,7 +36,7 @@
           <div id="menu-hidde">
             <ul class="nav-hidde">
               <li>
-                <a href="../pages/topicoUm.html"
+                <a href=""
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
                   1</a
                 >
@@ -100,34 +100,9 @@
         </div>
       </div>
     </header>
-    <main class="main-sobre-nos">
+    <main>
       <div>
-        <img src="../images/bartender.jfif" alt="" />
         <p>
-          Somos um trio de amigos que gosta de café e de passar o tempo a ouvir
-          um bom jazz. Por isso, decidimos explorar esta ideia unindo ambos os
-          conceitos de "café" e "Jazz". Assim, foi com isso em mente que criámos
-          "PARJA", para mostrar às pessoas que esta combinação era o que faltava
-          no seu dia a dia. Com um som envolvente, e um café especial que
-          convida, tornámos o nosso espaço num local acolhedor para todos,
-          fazendo um convite súbtil para que se juntem a nós e que desfrutem de
-          momentos memoráveis em boa companhia.
-        </p>
-        <p>
-          <!-- Somos um trio de amigos que adora café e gosta de passar o tempo a
-          ouvir jazz. Decidimos materializar esta ideia para mostrar às pessoas
-          que esta combinação é perfeita para o seu dia a dia. Com um som
-          envolvente no nosso ambiente, o sabor do nosso café especial convida
-          todos a juntarem-se a nós e a desfrutarem de momentos memoráveis em
-          boa companhia.
-        </p>
-        <p>
-          Somos um trio de amigos que adora café e gosta de passar o tempo a
-          ouvir jazz. Decidimos materializar esta ideia para mostrar às pessoas
-          que esta combinação é perfeita para o seu dia a dia. Com um som
-          envolvente no nosso ambiente, o sabor do nosso café especial convida
-          todos a juntarem-se a nós e a desfrutarem de momentos memoráveis em
-          boa companhia. -->
           <br />
           <br />
           Sócios - Artiom Gusanu, Pedro Pacheco e João Marques
