--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
           <div id="menu-hidde">
             <ul class="nav-hidde">
               <li>
-                <a href=""
+                <a href="/pages/topicoUm.html"
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
                   1</a
                 >
