--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -24,8 +24,8 @@
           <ul>
             <li><a href="../home.html">home</a></li>
             <li><a href="">Sobre Nós</a></li>
-            <li><a href="">Nosso Menu</a></li>
-            <li><a href="">Nossa Playlist</a></li>
+            <li><a href="">Menu</a></li>
+            <li><a href="">Playlist</a></li>
           </ul>
           <div class="linha"></div>
         </nav>
