Sobre-Nos.html e margin no topico um

--- a/pages/topicoUm.html
+++ b/pages/topicoUm.html
@@ -9,8 +9,8 @@
     />
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/styles/nav.css" />
-    <link rel="stylesheet" href="../styles/sobre-nos.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
+    <link rel="stylesheet" href="/styles/topicoUm.css" />
     <title>sobre nós</title>
   </head>
   <body>
@@ -23,7 +23,7 @@
         <nav>
           <ul>
             <li><a href="../home.html">home</a></li>
-            <li><a href="">Sobre Nós</a></li>
+            <li><a href="../pages/sobre-nos.html">Sobre Nós</a></li>
             <li><a href="">Menu</a></li>
             <li><a href="">Playlist</a></li>
           </ul>
@@ -100,7 +100,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class= "main-topicoUm">
       <div>
         <p>
           <br />
