alteracoes CAE, Nif, e-mail

--- a/pages/topicoUm.html
+++ b/pages/topicoUm.html
@@ -108,21 +108,21 @@
           Sócios - Artiom Gusanu, Pedro Pacheco e João Marques
           <br />
           <br />
-          NiF - 258055677
+          NiF - 546727530
           <br />
           <br />
-          Tipo de Empresa - privada com fins lucrativos
+          <!-- Tipo de Empresa - privada com fins lucrativos --> Empresa do tipo privada com fins lucrativos
           <br />
           <br />
-          CAE - 56301
+          CAE - 56301 (Exploração de Cafés)
         </p>
       </div>
     </main>
     <footer>
       <div class="contatos">
         <ul>
-          <li>telefone - 912902536</li>
-          <li>mail - parja.international@gmail.com</li>
+          <li>Telefone - 912902536</li>
+          <li>E-mail - parja.international@gmail.com</li>
           <li>Localização - Rua Augusta n° 22</li>
         </ul>
       </div>
