--- a/pages/topicoUm.html
+++ b/pages/topicoUm.html
@@ -15,10 +15,18 @@
   </head>
   <body>
     <header>
+
       <div class="logo-slogan">
         <img src="../images/logo.png" alt="" />
-        <p>o som que atrai e o sabor que conquista</p>
+        <h1 class="titulo">PARJA</h1>
+        <p class="frase">o som que atrai e o sabor que conquista</p>
       </div>
+
+      <!-- <div class="logo-slogan">
+        <img src="../images/logo.png" alt="" />
+        <p>o som que atrai e o sabor que conquista</p>
+      </div> -->
+
       <div class="opcoes">
         <nav>
           <ul>
@@ -104,18 +112,33 @@
       <div>
         <p>
           <br />
+          <li>Nome da Empresa - PARJA LDA</li>
           <br />
-          Sócios - Artiom Gusanu, Pedro Pacheco e João Marques
+          <li>Sócios - Artiom Gusanu (33,33%), Pedro Pacheco (33,33%) e João Marques (33,33%)</li>
           <br />
+          <!-- Tipo de Empresa - privada com fins lucrativos --><li>Empresa do tipo privada com fins lucrativos</li>
           <br />
-          NiF - 546727530
+          <li>Capital Social - 60.000€</li>
           <br />
+          <li>CAE - 56301 (Exploração de Cafés)</li> 
           <br />
-          <!-- Tipo de Empresa - privada com fins lucrativos --> Empresa do tipo privada com fins lucrativos
+          <li>NiF - 546727530</li>
+          <!-- <br />
+          O capital social da empresa ficou num total de 60.000€ da forma que todos os sócios, Artiom, Pedro e Marques, contribuissem com 
+          uma parte igual para este.
           <br />
-          <br />
-          CAE - 56301 (Exploração de Cafés)
+          Tornando assim PARJA em uma sociedade limitada ao capital social devido à utilização de cotas. -->
         </p>
+      </div>
+      <div class="explicacaoEmpresa">
+          <br />
+          <br />
+          O capital social da empresa ficou num total de 60.000€ da forma que todos os sócios, Artiom, Pedro e João, contribuissem com 
+          uma parte igual para este, acabando por utilizar esse dinheiro como forma de promover a confiança externa na empresa e trazer
+          uma certa segurança para potenciais investidores.
+          <br />
+          <br />
+          Tornando assim PARJA em uma sociedade limitada ao capital social devido à utilização de cotas.
       </div>
     </main>
     <footer>
