--- a/pages/sobre-nos.html
+++ b/pages/sobre-nos.html
@@ -42,7 +42,7 @@
                 >
               </li>
               <li>
-                <a href=""
+                <a href="../pages/topicoDois.html"
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
                   2</a
                 >
@@ -56,7 +56,7 @@
               <li>
                 <a href=""
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
-                  3</a
+                  4</a
                 >
               </li>
               <li>
