--- a/pages/topicoDois.html
+++ b/pages/topicoDois.html
@@ -44,13 +44,13 @@
           <div id="menu-hidde">
             <ul class="nav-hidde">
               <li>
-                <a href=""
+                <a href="../pages/topicoUm.html"
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
                   1</a
                 >
               </li>
               <li>
-                <a href=""
+                <a href="../pages/topicoDois.html"
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
                   2</a
                 >
@@ -64,7 +64,7 @@
               <li>
                 <a href=""
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
-                  3</a
+                  4</a
                 >
               </li>
               <li>
