alteracoes de texto topicoUM

--- a/pages/topicoUm.html
+++ b/pages/topicoUm.html
@@ -116,11 +116,11 @@
           <br />
           <li>Sócios - Artiom Gusanu (33,33%), Pedro Pacheco (33,33%) e João Marques (33,33%)</li>
           <br />
-          <!-- Tipo de Empresa - privada com fins lucrativos --><li>Empresa do tipo privada com fins lucrativos</li>
+          <!-- Tipo de Empresa - privada com fins lucrativos --><li>Socieadade Empresa do tipo privada com fins lucrativos</li>
           <br />
           <li>Capital Social - 60.000€</li>
           <br />
-          <li>CAE - 56301 (Exploração de Cafés)</li> 
+          <li>CAE - 56301 (Exploração de Cafés) - Este é devido á empresa ser muito á volta da venda de café</li> 
           <br />
           <li>NiF - 546727530</li>
           <!-- <br />
@@ -138,7 +138,7 @@
           uma certa segurança para potenciais investidores.
           <br />
           <br />
-          Tornando assim PARJA em uma sociedade limitada ao capital social devido à utilização de cotas.
+          Tornando assim PARJA em uma sociedade por quotas limitada ao capital social.
       </div>
     </main>
     <footer>
