--- a/pages/topicoDois.html
+++ b/pages/topicoDois.html
@@ -15,17 +15,11 @@
   </head>
   <body>
     <header>
-
       <div class="logo-slogan">
         <img src="../images/logo.png" alt="" />
         <h1 class="titulo">PARJA</h1>
         <p class="frase">o som que atrai e o sabor que conquista</p>
       </div>
-
-      <!-- <div class="logo-slogan">
-        <img src="../images/logo.png" alt="" />
-        <p>o som que atrai e o sabor que conquista</p>
-      </div> -->
 
       <div class="opcoes">
         <nav>
@@ -56,7 +50,7 @@
                 >
               </li>
               <li>
-                <a href=""
+                <a href="../pages/topicoTres.html"
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
                   3</a
                 >
@@ -108,50 +102,83 @@
         </div>
       </div>
     </header>
-    <main class= "main-topicoDois">
+    <main>
+      <div class="opcao-hide">
+        <h1>Ánalise swot</h1>
+      </div>
+      <div class="topicoDois">
         <div class="swot">
-            <h2>FORÇAS</h2>
-            <ul>
-                <li>Qualidade</li>
-                <li>Ambiente Inovador e Acolhedor</li>
-                <li>Atendimento extremamente cordial, incluindo visitas à casa do cliente</li>
-                <li>Variedade e Experimentação</li>
-                <li>Conexão com a Natureza e Sustentabilidade</li>
-            </ul>
+          <h2>FORÇAS</h2>
+          <ul>
+            <li>Qualidade</li>
+            <li>Ambiente Inovador e Acolhedor</li>
+            <li>
+              Atendimento extremamente cordial, incluindo visitas à casa do
+              cliente
+            </li>
+            <li>Variedade e Experimentação</li>
+            <li>Conexão com a Natureza e Sustentabilidade</li>
+          </ul>
         </div>
 
         <div class="swot">
-            <h2>FRAQUEZAS</h2>
-            <ul>
-                <li>Falta de Estacionamento</li>
-                <li>Horários Bem Específicos</li>
-                <li>Explicação Excessiva dos Produtos</li>
-                <li>Foco Intenso nos Clientes</li>
-                <li>Custo de Manutenção do Espaço</li>
-            </ul>
+          <h2>FRAQUEZAS</h2>
+          <ul>
+            <li>Falta de Estacionamento</li>
+            <li>Horários Bem Específicos</li>
+            <li>Explicação Excessiva dos Produtos</li>
+            <li>Foco Intenso nos Clientes</li>
+            <li>Custo de Manutenção do Espaço</li>
+          </ul>
         </div>
 
         <div class="swot">
-            <h2>OPORTUNIDADES</h2>
-            <ul>
-                <li>Eventos de degustação</li>
-                <li>Maior divulgação local</li>
-                <li>Parceria com apps de entrega</li>
-                <li>Eventos de Jazz ao Vivo</li>
-                <li>Expansão nas Redes Sociais</li>
-            </ul>
+          <h2>OPORTUNIDADES</h2>
+          <ul>
+            <li>Eventos de degustação</li>
+            <li>Maior divulgação local</li>
+            <li>Parceria com apps de entrega</li>
+            <li>Eventos de Jazz ao Vivo</li>
+            <li>Expansão nas Redes Sociais</li>
+          </ul>
         </div>
 
         <div class="swot">
-            <h2>AMEAÇAS</h2>
-            <ul>
-                <li>Concorrência de Cafetarias</li>
-                <li>Variações no Custo dos Grãos de Café</li>
-                <li>Estação do Ano</li>
-                <li>Dependência do Turismo</li>
-                <li>Preferências por Consumo Rápido</li>
-            </ul>
+          <h2>AMEAÇAS</h2>
+          <ul>
+            <li>Concorrência de Cafetarias</li>
+            <li>Variações no Custo dos Grãos de Café</li>
+            <li>Estação do Ano</li>
+            <li>Dependência do Turismo</li>
+            <li>Preferências por Consumo Rápido</li>
+          </ul>
         </div>
+      </div>
+      <div class="opcao-hide" onclick="openOpcao()">
+        <i id="flecha-forca" class="material-icons">arrow_forward</i>
+        <h1>forças</h1>
+      </div>
+      <div id="explicacao-forca" class="forca-explicacao">
+        <ul>
+          <li>Qualidade: Produtos premium para uma experiência única.</li>
+          <li>
+            Ambiente Acolhedor: Espaço inovador com sofás e escorrega para um
+            toque descontraído.
+          </li>
+          <li>
+            Atendimento Cordial: Serviço personalizado, incluindo visitas à casa
+            do cliente.
+          </li>
+          <li>
+            Variedade e Experimentação: Opções únicas, como cafés exóticos e
+            sobremesas diferentes.
+          </li>
+          <li>
+            Sustentabilidade: Compromisso com práticas ecológicas e conexão com
+            a natureza.
+          </li>
+        </ul>
+      </div>
     </main>
     <footer>
       <div class="contatos">
