--- a/pages/topicoUm.html
+++ b/pages/topicoUm.html
@@ -15,7 +15,6 @@
   </head>
   <body>
     <header>
-
       <div class="logo-slogan">
         <img src="../images/logo.png" alt="" />
         <h1 class="titulo">PARJA</h1>
@@ -44,7 +43,7 @@
           <div id="menu-hidde">
             <ul class="nav-hidde">
               <li>
-                <a href="../pages/topicoUm.html"
+                <a href=""
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
                   1</a
                 >
@@ -56,7 +55,7 @@
                 >
               </li>
               <li>
-                <a href=""
+                <a href="../pages/topicoTres.html"
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
                   3</a
                 >
@@ -108,37 +107,47 @@
         </div>
       </div>
     </header>
-    <main class= "main-topicoUm">
+    <main class="main-topicoUm">
       <div>
         <p>
           <br />
           <li>Nome da Empresa - PARJA LDA</li>
           <br />
-          <li>Sócios - Artiom Gusanu (33,33%), Pedro Pacheco (33,33%) e João Marques (33,33%)</li>
+          <li>
+            Logo - Foi discutido a ideia de usar um animal como logo e acabamos
+            por escolher um pinguim com chapéu e óculos para dar a ideia mais
+            formal.
+          </li>
           <br />
-          <!-- Tipo de Empresa - privada com fins lucrativos --><li>Socieadade Empresa do tipo privada com fins lucrativos</li>
+          <li>
+            Sócios - Artiom Gusanu (33,33%), Pedro Pacheco (33,33%) e João
+            Marques (33,33%)
+          </li>
+          <br />
+          <li>Organização do tipo privada com fins lucrativos</li>
           <br />
           <li>Capital Social - 60.000€</li>
           <br />
-          <li>CAE - 56301 (Exploração de Cafés) - Este é devido á empresa ser muito á volta da venda de café</li> 
+          <li>
+            CAE - 56301 (Exploração de Cafés) - Este é devido á empresa ser
+            muito á volta da venda de café
+          </li>
           <br />
           <li>NiF - 546727530</li>
-          <!-- <br />
-          O capital social da empresa ficou num total de 60.000€ da forma que todos os sócios, Artiom, Pedro e Marques, contribuissem com 
-          uma parte igual para este.
-          <br />
-          Tornando assim PARJA em uma sociedade limitada ao capital social devido à utilização de cotas. -->
         </p>
       </div>
       <div class="explicacaoEmpresa">
-          <br />
-          <br />
-          O capital social da empresa ficou num total de 60.000€ da forma que todos os sócios, Artiom, Pedro e João, contribuissem com 
-          uma parte igual para este, acabando por utilizar esse dinheiro como forma de promover a confiança externa na empresa e trazer
-          uma certa segurança para potenciais investidores.
-          <br />
-          <br />
-          Tornando assim PARJA em uma sociedade por quotas limitada ao capital social.
+        <br />
+        <br />
+        O capital social da empresa ficou num total de 60.000€ da forma que
+        todos os sócios, Artiom, Pedro e João, contribuissem com uma parte igual
+        para este, acabando por utilizar esse dinheiro como forma de promover a
+        confiança externa na empresa e trazer uma certa segurança para
+        potenciais investidores.
+        <br />
+        <br />
+        Tornando assim PARJA em uma sociedade por quotas limitada ao capital
+        social.
       </div>
     </main>
     <footer>
