--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
     <header>
       <div class="logo-slogan">
         <img src="../images/logo.png" width="150" height="150" alt="" />
+        <h1 class="titulo">PARJA</h1>
         <p>o som que atrai e o sabor que conquista</p>
       </div>
       <div class="opcoes">
@@ -48,7 +49,7 @@
                 >
               </li>
               <li>
-                <a href=""
+                <a href="../pages/topicoTres.html"
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
                   3</a
                 >
