--- a/pages/topicoTres.html
+++ b/pages/topicoTres.html
@@ -9,21 +9,22 @@
     />
     <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="/styles/nav.css" />
-    <link rel="stylesheet" href="../styles/sobre-nos.css" />
     <link rel="stylesheet" href="/styles/footer.css" />
-    <title>sobre nós</title>
+    <link rel="stylesheet" href="/styles/topicoTres.css" />
+    <title>Tópico 3</title>
   </head>
   <body>
     <header>
       <div class="logo-slogan">
         <img src="../images/logo.png" alt="" />
-        <p>o som que atrai e o sabor que conquista</p>
+        <h1 class="titulo">PARJA</h1>
+        <p class="frase">o som que atrai e o sabor que conquista</p>
       </div>
       <div class="opcoes">
         <nav>
           <ul>
             <li><a href="../home.html">home</a></li>
-            <li><a href="">Sobre Nós</a></li>
+            <li><a href="../pages/sobre-nos.html">Sobre Nós</a></li>
             <li><a href="">Menu</a></li>
             <li><a href="">Playlist</a></li>
           </ul>
@@ -48,7 +49,7 @@
                 >
               </li>
               <li>
-                <a href="../pages/topicoTres.html"
+                <a href=""
                   ><i id="flecha" class="material-icons">arrow_back</i>Tópico
                   3</a
                 >
@@ -100,50 +101,7 @@
         </div>
       </div>
     </header>
-    <main class="main-sobre-nos">
-      <div>
-        <img src="../images/bartender.jfif" alt="" />
-        <p>
-          Somos um trio de amigos que gosta de café e de passar o tempo a ouvir
-          um bom jazz. Por isso, decidimos explorar esta ideia unindo ambos os
-          conceitos de "café" e "Jazz". Assim, foi com isso em mente que criámos
-          "PARJA", para mostrar às pessoas que esta combinação era o que faltava
-          no seu dia a dia. Com um som envolvente, e um café especial que
-          convida, tornámos o nosso espaço num local acolhedor para todos,
-          fazendo um convite súbtil para que se juntem a nós e que desfrutem de
-          momentos memoráveis em boa companhia.
-        </p>
-        <p>
-          <!-- Somos um trio de amigos que adora café e gosta de passar o tempo a
-          ouvir jazz. Decidimos materializar esta ideia para mostrar às pessoas
-          que esta combinação é perfeita para o seu dia a dia. Com um som
-          envolvente no nosso ambiente, o sabor do nosso café especial convida
-          todos a juntarem-se a nós e a desfrutarem de momentos memoráveis em
-          boa companhia.
-        </p>
-        <p>
-          Somos um trio de amigos que adora café e gosta de passar o tempo a
-          ouvir jazz. Decidimos materializar esta ideia para mostrar às pessoas
-          que esta combinação é perfeita para o seu dia a dia. Com um som
-          envolvente no nosso ambiente, o sabor do nosso café especial convida
-          todos a juntarem-se a nós e a desfrutarem de momentos memoráveis em
-          boa companhia. -->
-          <br />
-          <br />
-          Sócios - Artiom Gusanu, Pedro Pacheco e João Marques
-          <br />
-          <br />
-          NiF - 546727530
-          <br />
-          <br />
-          <!-- Tipo de Empresa - privada com fins lucrativos -->
-          Empresa do tipo privada com fins lucrativos
-          <br />
-          <br />
-          CAE - 56301 (Exploração de Cafés)
-        </p>
-      </div>
-    </main>
+
     <footer>
       <div class="contatos">
         <ul>
