--- a/pages/topicoDois.html
+++ b/pages/topicoDois.html
@@ -154,11 +154,36 @@
           </ul>
         </div>
       </div>
-      <div class="opcao-hide" onclick="openOpcao()">
+      <div class="opcao-hide" onclick="openOpcaoForca()">
         <i id="flecha-forca" class="material-icons">arrow_forward</i>
         <h1>forças</h1>
       </div>
       <div id="explicacao-forca" class="forca-explicacao">
+        <ul>
+          <li>Qualidade: Produtos premium para uma experiência única.</li>
+          <li>
+            Ambiente Acolhedor: Espaço inovador com sofás e escorrega para um
+            toque descontraído.
+          </li>
+          <li>
+            Atendimento Cordial: Serviço personalizado, incluindo visitas à casa
+            do cliente.
+          </li>
+          <li>
+            Variedade e Experimentação: Opções únicas, como cafés exóticos e
+            sobremesas diferentes.
+          </li>
+          <li>
+            Sustentabilidade: Compromisso com práticas ecológicas e conexão com
+            a natureza.
+          </li>
+        </ul>
+      </div>
+      <div class="opcao-hide" onclick="openOpcaoFraqueza()">
+        <i id="flecha-fraqueza" class="material-icons">arrow_forward</i>
+        <h1>fraquezas</h1>
+      </div>
+      <div id="explicacao-fraquezas" class="explicacao-fraqueza">
         <ul>
           <li>Qualidade: Produtos premium para uma experiência única.</li>
           <li>
